fix: fix overflow and text-align

--- a/style.css
+++ b/style.css
@@ -469,7 +469,7 @@ SLIDER */
     width: 100%;
     height: 460px;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: 300px 300px 300px;
     gap: 20px;
 }
 
@@ -485,14 +485,17 @@ SLIDER */
     padding-top: 15px;
     letter-spacing: -0.25px;
     font-size: 18px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
     color: #666d89;
     font-family: "Lato", Arial, sans-serif;
     font-weight: 900;
+    overflow: hidden;
 }
 
 .persons-info-text-description {
     padding-top: 10px;
-    letter-spacing: -0.06px;
+    text-align: justify;
     font-size: 12px;
     line-height: 22px;
     color: #767e9e;
